# mfd-ftp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: main.yml  manual_release.yml  pull_request.yml  pull_requests.yml  run_tests.yml
examples/: example_ftpclient.py  example_ftpserver.py  example_ftputil.py  simple_example.py
sphinx-doc/: Makefile  README.md  conf.py  generate_docs.py  index.rst
tests/unit/: __init__.py
tests/unit/test_mfd_ftpclient/: test_ftp_client.py
tests/unit/test_mfd_ftpserver/: test_ftp_server.py
tests/unit/test_mfd_ftptraffics/: test_client_traffic.py  test_server_traffic.py
tests/unit/test_mfd_ftputil/: test_base.py
